# TaskFlowPy

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
TaskFlowPy/: cli.py  storage.py  task_manager.py
scripts/: check_wheel_metadata.py  smoke_install.sh
tests/: test_task_manager.py
