[build-system]
# Versões mais recentes do setuptools e wheel para suportar PEP 621
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TaskFlowPy"
version = "0.2.0"
description = "Um gerenciador de tarefas simples e eficiente para projetos Python, com suporte a JSON e SQLite."
readme = "README.md"
license = { file = "LICENSE" } # Ou "MIT" direto, se preferir.
authors = [
  { name = "Roberto Lima", email = "robertolima.izphera@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
  "click",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
taskflowpy = "TaskFlowPy.cli:main"

[project.urls]
Homepage = "https://github.com/robertolima-dev/TaskFlowPy"
Repository = "https://github.com/robertolima-dev/TaskFlowPy"
Issues = "https://github.com/robertolima-dev/TaskFlowPy/issues"
